// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ShapePanel in mobile should render correctly 1`] = `
<div>
  <div
    class="adm-floating-panel panel"
    data-animating="false"
    style="height: 627px; transform: translateY(calc(100% + (-627px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          classname=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Elements
      </div>
      <div
        class="adm-capsule-tabs tabs"
      >
        <div
          class="adm-capsule-tabs-header"
        >
          <div
            class="adm-scroll-mask adm-scroll-mask-left"
            style="opacity: 0;"
          />
          <div
            class="adm-scroll-mask adm-scroll-mask-right"
            style="opacity: 0;"
          />
          <div
            class="adm-capsule-tabs-tab-list"
          >
            <div
              class="adm-capsule-tabs-tab-wrapper"
            >
              <div
                class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
              >
                Shape
              </div>
            </div>
            <div
              class="adm-capsule-tabs-tab-wrapper"
            >
              <div
                class="adm-capsule-tabs-tab"
              >
                Graphics
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="scroll-content"
      >
        <div
          class="icon-list"
        >
          <span
            class="anticon icon"
            role="img"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 50 50"
              width="1em"
            >
              mock-svg
            </svg>
          </span>
          <span
            class="anticon icon"
            role="img"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 50 50"
              width="1em"
            >
              mock-svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ShapePanel should render correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 420px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Elements
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="adm-capsule-tabs tabs"
              >
                <div
                  class="adm-capsule-tabs-header"
                >
                  <div
                    class="adm-scroll-mask adm-scroll-mask-left"
                    style="opacity: 0;"
                  />
                  <div
                    class="adm-scroll-mask adm-scroll-mask-right"
                    style="opacity: 0;"
                  />
                  <div
                    class="adm-capsule-tabs-tab-list"
                  >
                    <div
                      class="adm-capsule-tabs-tab-wrapper"
                    >
                      <div
                        class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
                      >
                        Shape
                      </div>
                    </div>
                    <div
                      class="adm-capsule-tabs-tab-wrapper"
                    >
                      <div
                        class="adm-capsule-tabs-tab"
                      >
                        Graphics
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="shadow-container"
              >
                <div
                  class="scroll-content"
                >
                  <div
                    class="icon-list"
                  >
                    <span
                      class="anticon icon"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 50 50"
                        width="1em"
                      >
                        mock-svg
                      </svg>
                    </span>
                    <span
                      class="anticon icon"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 50 50"
                        width="1em"
                      >
                        mock-svg
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="shadow"
                  style="display: none;"
                />
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
